examples/manifests/consumer-cert-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-consumer-deployment
  namespace: cloud-events
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        app: consumer
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: consumer-sa
      containers:
        - name: cloud-event-consumer
          image: cloud-event-consumer
          imagePullPolicy: Always
          args:
            - "--local-api-addr=consumer-events-subscription-service.cloud-events.svc.cluster.local:9043"
            - "--api-path=/api/ocloudNotifications/v2/"
            - "--http-event-publishers=ptp-event-publisher-service-NODE_NAME.openshift-ptp.svc.cluster.local:9043"
            - "--auth-config=/etc/cloud-event-consumer/auth/config.json"
          volumeMounts:
            - name: pubsubstore
              mountPath: /store
            - name: client-certs
              mountPath: /etc/cloud-event-consumer/client-certs
              readOnly: true
            - name: ca-bundle
              mountPath: /etc/cloud-event-consumer/ca-bundle
              readOnly: true
            - name: auth-config
              mountPath: /etc/cloud-event-consumer/auth
              readOnly: true
            - name: service-account-token
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: pubsubstore
          emptyDir: {}
        - name: client-certs
          secret:
            secretName: cloud-event-consumer-mtls-tls
        - name: ca-bundle
          secret:
            secretName: cloud-event-proxy-ca-tls
        - name: auth-config
          configMap:
            name: consumer-auth-config
        - name: service-account-token
          projected:
            sources:
            - serviceAccountToken:
                path: token
                expirationSeconds: 3600
