examples/manifests/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-producer-deployment
  namespace: cloud-native-events
  labels:
    app: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - local
      serviceAccountName: sidecar-producer-sa
      containers:
        - name: cloud-native-event-producer
          image: quay.io/aneeshkp/cloud-native-event-producer:latest
          args:
            - "--local-api-addr=127.0.0.1:9089"
            - "--api-path=/api/cloudNotifications/v1/"
            - "--api-addr=127.0.0.1:8080"
        - name: cloud-native-event-sidecar
          image: quay.io/aneeshkp/cloud-event-proxy:latest
          args:
            - "--metrics-addr=127.0.0.1:9091"
            - "--store-path=/store"
            - "--transport-host=amqp://amq-interconnect"
            - "--api-port=8080"
          volumeMounts:
            - name: pubsubstore
              mountPath: /store
          ports:
            - name: metrics-port
              containerPort: 9091
        - name: kube-rbac-proxy
          image: quay.io/coreos/kube-rbac-proxy:v0.5.0
          args:
            - --logtostderr
            - --secure-listen-address=:8443
            - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
            - --upstream=http://127.0.0.1:9091/
            - --tls-private-key-file=/etc/metrics/tls.key
            - --tls-cert-file=/etc/metrics/tls.crt
          ports:
            - containerPort: 8443
              name: https
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            - name: sidecar-certs
              mountPath: /etc/metrics
      volumes:
        - name: pubsubstore
          emptyDir: {}
        - name: sidecar-certs
          secret:
            secretName: sidecar-producer-secret
